[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://gradient.jpg" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gradient" type="Sprite" parent="."]
position = Vector2( 219.263, 299.697 )
scale = Vector2( 0.622333, 0.971672 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 135.0
margin_top = 148.0
margin_right = -141.0
margin_bottom = -201.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 164.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 14.0
text = "Enter The Bounds."
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 164.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 120.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 164.0
margin_bottom = 66.0
text = "START"
flat = true

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 164.0
margin_bottom = 136.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_right = 164.0
margin_bottom = 14.0
text = "Enter the guess"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 164.0
margin_bottom = 42.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 58.0
margin_bottom = 24.0

[node name="Button" type="Button" parent="VBoxContainer/VBoxContainer2"]
margin_top = 46.0
margin_right = 164.0
margin_bottom = 66.0
text = "Guess"
flat = true

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 164.0
margin_bottom = 154.0
align = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_bottom = 46.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 164.0
margin_top = 16.0
margin_right = 275.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "THE GUESS GAME"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 124.0
margin_top = 17.0
margin_right = 316.0
margin_bottom = 31.0
text = "Credits: Ashutosh Vishu Yadav"
align = 1

[node name="CenterContainer3" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer3"]
margin_left = 200.0
margin_right = 239.0
margin_bottom = 20.0
text = "EXIT"
flat = true

[node name="CenterContainer4" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -44.0
margin_bottom = -39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer4"]
margin_left = 187.0
margin_right = 252.0
margin_bottom = 20.0
text = "RESTART"
flat = true
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer/HBoxContainer/LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="VBoxContainer/VBoxContainer2/HBoxContainer/LineEdit" to="." method="_on_LineEdit3_text_changed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/Button" to="." method="_on_Guess_Button_pressed"]
[connection signal="pressed" from="CenterContainer3/Button" to="." method="_on_Exit_Button_pressed"]
[connection signal="pressed" from="CenterContainer4/Button" to="." method="_on_Restart_Button_pressed"]
